Fix connection to database.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password&useSSL=false
+spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=credible-nation-130012:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
