Both time-writer-base and time-writer-with-db work now.

--- a/server/time-writer-with-db/src/main/resources/application.properties
+++ b/server/time-writer-with-db/src/main/resources/application.properties
@@ -1,14 +1,4 @@
-spring.jpa.database=default
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Datasource
-stub.datasource.jdbcUrl=jdbc:h2:men:/test
-stub.datasource.username=sa
-stub.datasource.password=
-stub.datasource.driver-class-name=org.h2.Driver
-
-spring.datasource.jdbcUrl=jdbc:mysql://google/users?cloudSqlInstance=credible-nation-130012:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password&useSSL=false
+spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=credible-nation-130012:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
