--- a/server/time-writer-base/src/main/resources/application.properties
+++ b/server/time-writer-base/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Datasource
-stub.datasource.jdbcUrl=jdbc:h2:file:~/test
-stub.datasource.username=sa
-stub.datasource.password=
-stub.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/test2
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+logging.level.com.github.mhdirkse.=DEBUG
