Make data manipulations transactional.

--- a/server/time-writer-base/src/main/resources/application.properties
+++ b/server/time-writer-base/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 logging.level.com.github.mhdirkse.=DEBUG
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
