--- a/server/time-writer-with-db/src/main/resources/application.properties
+++ b/server/time-writer-with-db/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=credible-nation-130012:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=password&useSSL=false
+spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=credible-nation-130012:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=${dbpassword}&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=${dbpassword}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.root=DEBUG
