--- a/server/time-writer-with-db/src/main/resources/application.properties
+++ b/server/time-writer-with-db/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=${googleProject}:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=${dbpassword}&useSSL=false
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.username=root
 spring.datasource.password=${dbpassword}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
