--- a/time-writer-with-db/src/main/resources/application.properties
+++ b/time-writer-with-db/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=${googleProject}:europe-west1:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=${dbpassword}&useSSL=false
+spring.datasource.url=jdbc:mysql://google/users?cloudSqlInstance=${googleProject}:${googleRegion}:users&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=${dbpassword}&useSSL=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.username=root
 spring.datasource.password=${dbpassword}
